add docker image path to exercise files

--- a/part1/1.01/1.01.md
+++ b/part1/1.01/1.01.md
@@ -1,4 +1,9 @@
 
+#### [image in docker hub](https://hub.docker.com/r/lnsth/logoutput)
+
+#### Log output application at: part1/1.01/logoutput
+
+
 
 Create a cluster:
 ```
