--- a/part1/1.04/1.04.md
+++ b/part1/1.04/1.04.md
@@ -1,3 +1,8 @@
+#### [image in docker hub](https://hub.docker.com/r/lnsth/webserver)
+
+#### Project at: /part1/1.04/webserver/
+
+#### deployment.yaml at: /part1/1.04/webserver/manifests/deployment.yaml
 
 
 delete deployment:
@@ -28,7 +33,6 @@ Get pods:
 sudo kubectl get pod
 NAME                             READY   STATUS    RESTARTS   AGE
 webserver-7cc7ff4c55-5q7nq       1/1     Running   0          20s
-
 
 
 ```
