--- a/part1/1.05/1.05.md
+++ b/part1/1.05/1.05.md
@@ -1,3 +1,11 @@
+
+#### [image in docker hub](https://hub.docker.com/r/lnsth/todo-app)
+
+#### Project at: part1/1.05/webserver/
+
+#### deployment.yaml at: part1/1.05/webserver/manifests/deployment.yaml
+
+
 build image with tag:
 
 ```
