--- a/part1/1.03/1.03.md
+++ b/part1/1.03/1.03.md
@@ -1,3 +1,9 @@
+#### [image in docker hub](https://hub.docker.com/r/lnsth/exercise3)
+
+#### Log output application at: part1/1.03/logoutput/
+
+#### deployment.yaml at: part1/1.03/logoutput/manifests/deployment.yaml
+
 
 
 delete deployment:
