--- a/part1/1.05/1.05.md
+++ b/part1/1.05/1.05.md
@@ -1,57 +1,20 @@
 
-#### [image in docker hub](https://hub.docker.com/r/lnsth/todo-app)
+#### [image in docker hub tag v0.3](https://hub.docker.com/r/lnsth/todo-app)
 
 #### Project at: part1/1.05/webserver/
 
-#### deployment.yaml at: part1/1.05/webserver/manifests/deployment.yaml
-
-
-build image with tag:
-
-```
-
-sudo docker build . -t todo-app:v0.3
-
-```
-
-
-tag image:
-
-```
-
-docker tag todo-app:v0.3 lnsth/todo-app:v0.3
-
-```
-
-
-push to docker hub:
-
-```
-
-docker push lnsth/todo-app:v0.3
-
-```
+#### deployment.yaml: part1/1.05/webserver/manifests/deployment.yaml
+#### html file: part1/1.05/webserver/src/main/resources/static/hello.html
 
 
 
-Apply the deployment with apply command:
+apply deployment:
 
 ```
 
 sudo kubectl apply -f deployment.yaml 
 
 ```
-
-
-
-update deployment with new image
-
-```
-
-sudo kubectl set image deployment/webserver webserver=lnsth/todo-app:v0.3
-
-```
-
 
 
 get pod:
