part1 1.09 fix ingress and exercise md file

--- a/part1/1.09/1.09.md
+++ b/part1/1.09/1.09.md
@@ -1,4 +1,6 @@
-#### [image in docker hub tag exercise_1.08](https://hub.docker.com/r/lnsth/todo-app)
+#### [logoutput image in docker hub: tag exercise_1.07](https://hub.docker.com/r/lnsth/todo-app)
+
+#### [pingpong image in docker hub: tag exercise_1.09](https://hub.docker.com/r/lnsth/pingpong)
 
 #### logoutput app at: part1/1.09/logoutput
 
@@ -6,6 +8,10 @@
 
 
 #### ingress.yaml: part1/1.09/manifests/ingress.yaml
+
+
+
+### create pingpong app and create deployment and service for it:
 
 
 apply deployment:
@@ -18,7 +24,6 @@ sudo kubectl apply -f manifests/deployment.yaml
 ```
 
 
-
 apply service:
 
 ```
@@ -29,7 +34,7 @@ sudo kubectl apply -f manifests/service.yaml
 ```
 
 
-apply ingress:
+apply ingress (which is shared by the logoutput app and the pingpong app):
 
 ```
 
@@ -39,9 +44,33 @@ sudo kubectl apply -f manifests/ingress.yaml
 ```
 
 
+get ingress:
+
+```
+
+sudo kubectl get ingress
+NAME             CLASS    HOSTS   ADDRESS                            PORTS   AGE
+shared-ingress   <none>   *       172.25.0.2,172.25.0.3,172.25.0.4   80      45m
+
+```
+
+
+get service:
+
+```
+sudo kubectl get service
+NAME                TYPE        CLUSTER-IP      EXTERNAL-IP   PORT(S)    AGE
+pingpong-svc        ClusterIP   10.43.125.218   <none>        8888/TCP   39m
+hashgenerator-svc   ClusterIP   10.43.132.194   <none>        2345/TCP   39m
+
+```
+
+
 check access for logoutput:
 ```
 
+curl http://localhost:8081/
+Greetings from Spring Boot!
 
 curl http://localhost:8081/status
 2021-11-17T17:56:37.958Z: b335c9ba-6040-4fc9-b0fb-fc8ebe554fcb
@@ -55,7 +84,6 @@ check access for pingpong:
 
 curl http://localhost:8081/pingpong
 pong0
-
 
 curl http://localhost:8081/pingpong
 pong1
