fix exercise file

--- a/part1/1.09/1.09.md
+++ b/part1/1.09/1.09.md
@@ -1,4 +1,4 @@
-#### [logoutput image in docker hub: tag exercise_1.07](https://hub.docker.com/r/lnsth/todo-app)
+#### [logoutput image in docker hub: tag exercise_1.09](https://hub.docker.com/r/lnsth/todo-app)
 
 #### [pingpong image in docker hub: tag exercise_1.09](https://hub.docker.com/r/lnsth/pingpong)
 
@@ -34,34 +34,12 @@ sudo kubectl apply -f manifests/service.yaml
 ```
 
 
-apply ingress (which is shared by the logoutput app and the pingpong app):
+apply new ingress:
 
 ```
 
 sudo kubectl apply -f manifests/ingress.yaml
 
-
-```
-
-
-get ingress:
-
-```
-
-sudo kubectl get ingress
-NAME             CLASS    HOSTS   ADDRESS                            PORTS   AGE
-shared-ingress   <none>   *       172.25.0.2,172.25.0.3,172.25.0.4   80      45m
-
-```
-
-
-get service:
-
-```
-sudo kubectl get service
-NAME                TYPE        CLUSTER-IP      EXTERNAL-IP   PORT(S)    AGE
-pingpong-svc        ClusterIP   10.43.125.218   <none>        8888/TCP   39m
-hashgenerator-svc   ClusterIP   10.43.132.194   <none>        2345/TCP   39m
 
 ```
 
