--- a/part2/2.04/2.04.md
+++ b/part2/2.04/2.04.md
@@ -31,7 +31,7 @@ namespace/todo-app-ns created
 ```
 
 
-logoutput and pingpong app (in same pod) moved to the created namespace:
+todo app frontend and backend (in same pod) moved to the created namespace:
 
 ```
 
