--- a/part2/2.09/2.09.md
+++ b/part2/2.09/2.09.md
@@ -1,9 +1,9 @@
 
-### [todo reminder image in docker hub: tag exercise_2.09](https://hub.docker.com/r/lnsth/todo-app-reminder)
+#### [todo reminder image in docker hub: tag exercise_2.09](https://hub.docker.com/r/lnsth/todo-app-reminder)
 
-### todo reminder app: part2/2.09/reminder-todos
+#### todo reminder app: part2/2.09/reminder-todos
 
-### yaml files: /part2/2.09/manifests/
+#### yaml files: /part2/2.09/manifests/
 
 
 
@@ -19,7 +19,7 @@ sudo kubectl apply -f manifests/
 
 
 check output: (check todos from the todo app): 
-one todo was added to db: {"id":7,"content":"Read https://en.wikipedia.org/wiki/Devakanya","status":"todo"}
+one todo was added to db: {"id":7,"content":"Read https://en.wikipedia.org/wiki/Devakanya", "status":"todo"}
 
 ```
  
