--- a/part2/2.09/2.09.md
+++ b/part2/2.09/2.09.md
@@ -27,7 +27,9 @@ one todo was added to db: {"id":7,"content":"Read https://en.wikipedia.org/wiki/
 GET /todo HTTP/1.1
 Host: localhost:8081
 
-[{"id":1,"content":"todo1","status":"Todo"},{"id":2,"content":"todo2","status":"Doing"},{"id":3,"content":"todo3","status":"Todo"},{"id":4,"content":"read a book","status":"Todo"},{"id":5,"content":"Read https://en.wikipedia.org/wiki/Joseph_M._Sussman","status":"todo"},{"id":6,"content":"Read https://en.wikipedia.org/wiki/How_to_Be_a_Complete_Bastard","status":"todo"},{"id":7,"content":"Read https://en.wikipedia.org/wiki/Devakanya","status":"todo"}]
+[{"id":1,"content":"todo1","status":"Todo"},
+.....
+{"id":7,"content":"Read https://en.wikipedia.org/wiki/Devakanya","status":"todo"}]
 
 
 ```
