--- a/part3/3.03/3.03.md
+++ b/part3/3.03/3.03.md
@@ -13,13 +13,11 @@
 #### kustomization: part3/3.03/kustomization.yaml
 
 
-
-
-apply:
-
 ```
-
-sudo kubectl apply -f manifests/
+kubectl config get-contexts
+CURRENT   NAME                                             CLUSTER                                          AUTHINFO                                         NAMESPACE
+*         gke_dwk-gke-333120_europe-north1-b_dwk-cluster   gke_dwk-gke-333120_europe-north1-b_dwk-cluster   gke_dwk-gke-333120_europe-north1-b_dwk-cluster   
+          k3d-k3s-default                                  k3d-k3s-default                                  admin@k3d-k3s-default                            
 
 ```
 
