--- a/part3/3.03/3.03.md
+++ b/part3/3.03/3.03.md
@@ -43,6 +43,11 @@ todo-app-svc        LoadBalancer   10.32.13.109   34.88.250.147   2222:30194/TCP
 
 check output: 
 ```
+from browser http://34.88.250.147:2222/
+
+
+Origin: http://34.88.250.147:2222
+
 Request URL: http://34.88.250.147:9999/todo
 Request Method: GET
 Status Code: 200 
