--- a/part3/3.04/3.04.md
+++ b/part3/3.04/3.04.md
@@ -1,8 +1,13 @@
 
-### app is now deployed to gcp via github ci(github Actions)
-
 ## create own environment for each branch
 
-#### ci yaml: /.github/workflows/branch.yaml
+```
+
+kubectl create namespace ${GITHUB_REF#refs/heads/} || true
+kubectl config set-context --current --namespace=${GITHUB_REF#refs/heads/}
+kustomize edit set namespace ${GITHUB_REF#refs/heads
+	
+```
+#### ci yaml: /.github/workflows/main.yaml
 
 
