--- a/part3/3.03/3.03.md
+++ b/part3/3.03/3.03.md
@@ -6,9 +6,9 @@
 
 #### todo backend at: part3/3.03/be-todos
 
-#### ci yaml: /.github/workflows/main.yaml
+#### ci yaml: /.github/workflows/main.yaml (the version used for this exercise is stored in part3/3.03/main.yaml)
 
-#### yaml files: part3/3.03/manifests/
+#### yaml files: part3/3.03/manifests/ 
 
 #### kustomization: part3/3.03/kustomization.yaml
 
