--- a/part3/3.07/3.07.md
+++ b/part3/3.07/3.07.md
@@ -6,6 +6,13 @@
 
 - part3/3.07/manifests/postgres-deployment
 
-- ci yaml: /.github/workflows/main.yaml
 
+
+```
+
+kubectl get pvc -n part3
+NAME           STATUS   VOLUME                                     CAPACITY   ACCESS MODES   STORAGECLASS   AGE
+postgres-pvc   Bound    pvc-838f7bfb-d1a4-4e7f-a7fa-f6d1a0ac03f6   1Gi        RWO            standard       132m
+
+```
 
