--- a/part3/3.05/3.05.md
+++ b/part3/3.05/3.05.md
@@ -1,6 +1,7 @@
-
 ## delete environment when branch is deleted
 
-#### ci yaml: /.github/workflows/delete_branch.yaml
+### ci yaml: /.github/workflows/delete_branch.yaml
 
+
+### created and deleted test branch: Exe305BranchDelete
 
