--- a/part3/3.05/3.05.md
+++ b/part3/3.05/3.05.md
@@ -3,5 +3,5 @@
 ### ci yaml: /.github/workflows/delete_branch.yaml
 
 
-### created and deleted test branch: Exe305BranchDelete
+### created and deleted test branch: exe305-delete-branch
 
