--- a/part3/3.05/3.05.md
+++ b/part3/3.05/3.05.md
@@ -5,3 +5,42 @@
 
 ### created and deleted test branch: exe305-delete-branch
 
+
+tmp branch with own environment
+
+```
+
+kubectl get namespaces
+NAME                   STATUS   AGE
+default                Active   3d18h
+exe305-delete-branch   Active   37m
+kube-node-lease        Active   3d18h
+kube-public            Active   3d18h
+kube-system            Active   3d18h
+part3                  Active   15h
+
+```
+
+```
+
+kubectl get all -n exe305-delete-branch
+NAME                            READY   STATUS    RESTARTS      AGE
+pod/postgres-0                  1/1     Running   0             41s
+pod/todo-app-744477898b-n2gdq   2/2     Running   1 (24s ago)   41s
+
+NAME                       TYPE           CLUSTER-IP     EXTERNAL-IP   PORT(S)                         AGE
+service/postgres-service   ClusterIP      10.32.15.103   <none>        5432/TCP                        43s
+service/todo-app-svc       LoadBalancer   10.32.1.43     34.88.55.67   2222:31366/TCP,9999:30612/TCP   42s
+
+NAME                       READY   UP-TO-DATE   AVAILABLE   AGE
+deployment.apps/todo-app   1/1     1            1           41s
+
+NAME                                  DESIRED   CURRENT   READY   AGE
+replicaset.apps/todo-app-744477898b   1         1         1       41s
+
+NAME                        READY   AGE
+statefulset.apps/postgres   1/1     42s
+
+```
+
+after branch deleted:
