--- a/part3/3.05/3.05.md
+++ b/part3/3.05/3.05.md
@@ -43,4 +43,17 @@ statefulset.apps/postgres   1/1     42s
 
 ```
 
-after branch deleted:
+when branch deleted:
+
+```
+Clean up for branch exe305-delete-branch
+
+pod "postgres-0" deleted
+pod "todo-app-788d64cb6-t9ll2" deleted
+service "postgres-service" deleted
+service "todo-app-svc" deleted
+deployment.apps "todo-app" deleted
+statefulset.apps "postgres" deleted
+delete-environment
+
+```
