--- a/part3/3.05/3.05.md
+++ b/part3/3.05/3.05.md
@@ -55,5 +55,6 @@ service "todo-app-svc" deleted
 deployment.apps "todo-app" deleted
 statefulset.apps "postgres" deleted
 delete-environment
+namespace "exe305-delete-branch" deleted
 
 ```
