--- a/part3/3.08/3.08.md
+++ b/part3/3.08/3.08.md
@@ -5,11 +5,22 @@
 - part3/3.08/manifests/
 
 
-
-
 ```
 
+kubectl get pod -n main
+NAME                       READY   STATUS    RESTARTS   AGE
+postgres-0                 1/1     Running   0          28m
+todo-app-b685c56bf-xmnpw   2/2     Running   0          2m43s
 
+
+kubectl top pod -l app=todo-app -n main
+NAME                       CPU(cores)   MEMORY(bytes)   
+todo-app-b685c56bf-xmnpw   2m           287Mi       
+
+
+kubectl get hpa -n main
+NAME          REFERENCE             TARGETS   MINPODS   MAXPODS   REPLICAS   AGE
+todoapp-hpa   Deployment/todo-app   8%/50%    1         3         1          80m
 
 ```
 
