--- a/part3/3.02/3.02.md
+++ b/part3/3.02/3.02.md
@@ -24,6 +24,13 @@ sudo kubectl apply -f manifests/
 
 ```
 
+kubectl get pod -n applications
+NAME                         READY   STATUS    RESTARTS   AGE
+logoutput-689984f858-6zxzj   2/2     Running   0          92m
+pingpong-65b5ffc666-pvtwj    1/1     Running   0          50m
+postgres-0                   1/1     Running   0          93m
+
+
 kubectl get svc -n applications
 NAME               TYPE        CLUSTER-IP     EXTERNAL-IP   PORT(S)        AGE
 logoutput-svc      NodePort    10.32.1.8      <none>        80:32429/TCP   84m
