--- a/part4/4.06/4.06.md
+++ b/part4/4.06/4.06.md
@@ -35,3 +35,12 @@ NAME                        READY   AGE
 statefulset.apps/postgres   1/1     166m
 
 ```
+
+```
+
+kubectl get svc
+NAME               TYPE        CLUSTER-IP   EXTERNAL-IP   PORT(S)                                                 AGE
+kubernetes         ClusterIP   10.43.0.1    <none>        443/TCP                                                 20d
+my-nats            ClusterIP   None         <none>        4222/TCP,6222/TCP,8222/TCP,7777/TCP,7422/TCP,7522/TCP   17h
+
+```
