--- a/part5/5.04/5.04.md
+++ b/part5/5.04/5.04.md
@@ -6,7 +6,7 @@ By reading official documentation and online materials, Rancher sounds a better 
 	- can easily manage multiple clusters from a single console and multi cluster operation stable for many years
 	- follows industry best practices and uses tooling from CNCF
 	- offers both web UI and CLI for automation
-	- simple installation process (with helm) and easy to expand and build new clusters (20min - 2days)
+	- simple installation process (20min - 2days) (with helm) and easy to expand and build new clusters
 	- easy to upgrade (helm chart or docker image)
 	- open-source software/free
 
